[project]
name = "steel-website"
version = "0.1.0"
description = "The Website for the Ethereum Foundation STEEL Team"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
build = ["zensical>=0.0.8"]
spellcheck = ["codespell>=2.4.1,<3"]
dev = [{ include-group = "build" }, { include-group = "spellcheck" }]

[tool.codespell]
builtin = "clear,code,usage"   # Built-in dictionaries to use
ignore-words = "whitelist.txt" # Custom whitelist file
count = true                   # Display counts of errors
check-hidden = false           # Don't check hidden files (starting with .)
